initial2: Update on September 1st

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: CVPM 2025
-description: Computer Vision for Physiological Monitoring at ICCV 2025
+title: Computer Vision for Physiological Monitoring @ ICCV 2025
+description: Sunday October 19th, 8 AM - 12:15 PM, Fill in Room Here
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
